--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,6 +1,9 @@
 @import "reset.css";
 @primary-color:#0066cc;
 @edge-color:#e5e5e5;
+@full-width:1000px;
+@frame-margin:5px;
+@frame-padding:10px;
 
 body{
 	font-family: "Microsoft YaHei";
@@ -12,6 +15,36 @@ body{
 .container-1k{
 	width: 1000px;
 	margin: 0 auto 0 auto;
+}
+
+.invisiable{
+	visibility: hidden;
+}
+
+.frame{
+	border: @edge-color solid 1px;
+	margin: @frame-margin;
+	padding: @frame-padding;
+	float: left;
+	.frame-header{
+		width: 100%;
+		border-bottom: solid 1px @primary-color;
+		padding-bottom: 5px;
+		h3{
+			display: block;
+			border-left: solid 5px @primary-color;
+			padding-left: 5px;
+			color: @primary-color;
+			font-size: 16px;
+			font-weight: bold;
+			height: 16px;
+		}
+	}
+}
+
+// layout
+.col-2{
+	width: (@full-width - (@frame-margin+@frame-padding)*4)/2;
 }
 
 #header{
@@ -76,6 +109,9 @@ body{
 			font-size: 16px;
 			color: white;
 			text-decoration: none;
+			&:hover{
+				color: #ccc;
+			}
 		}
 	}
 	#nav-2{
@@ -92,10 +128,8 @@ body{
 			a{
 				color: #666;
 				text-decoration: none;
-			}
-			&.active{
-				a{
-					color: black;
+				&.active{
+					color: @primary-color;
 				}
 			}
 		}
@@ -104,10 +138,8 @@ body{
 
 #main{
 	.container-1k{
-		height: 400px;
+		height: 1400px;
 		margin: 30px auto 30px auto;
-		background-color: white;
-		border: @edge-color solid 1px;
 	}
 }
 
@@ -132,8 +164,16 @@ body{
 					color: #ccc;
 					text-decoration: none;
 					margin: 0 0 8px 0;
+					&:hover,
+					&:active{
+						color: white;
+					}
 				}
 			}
+		}
+		img{
+			width: 100px;
+			height: 100px;
 		}
 	}
 	#footer-siteinfo{
@@ -146,4 +186,12 @@ body{
 			padding-top: 24px;
 		}
 	}
+}
+
+
+
+// index page
+.hotnews{
+	height: 300px;
+	background-color: white;
 }
