--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,6 +1,7 @@
 @import "reset.css";
 @primary-color:#0066cc;
 @edge-color:#e5e5e5;
+@edge-color-2:#999;
 @full-width:1000px;
 @frame-margin:5px;
 @frame-padding:10px;
@@ -8,12 +9,17 @@
 body{
 	font-family: "Microsoft YaHei";
 	font-size: 14px;
-	line-height: 14px;
+	line-height: 100%;
 	background: url("../images/bg.png") repeat;
+}
+p{
+	text-indent: 28px;
+	margin-bottom: 10px;
+	line-height: 150%;
 }
 
 .container-1k{
-	width: 1000px;
+	width: @full-width;
 	margin: 0 auto 0 auto;
 }
 
@@ -21,15 +27,30 @@ body{
 	visibility: hidden;
 }
 
+.list-item-link{
+	color: #444;
+	text-decoration: none;
+	&:hover{
+		color:@primary-color;
+		text-decoration: underline;
+	}
+}
+
+
+
 .frame{
 	border: @edge-color solid 1px;
 	margin: @frame-margin;
 	padding: @frame-padding;
+	background-color: white;
 	float: left;
 	.frame-header{
+		position: relative;
 		width: 100%;
 		border-bottom: solid 1px @primary-color;
 		padding-bottom: 5px;
+		margin-top: 5px;
+		margin-bottom: 15px;
 		h3{
 			display: block;
 			border-left: solid 5px @primary-color;
@@ -37,14 +58,102 @@ body{
 			color: @primary-color;
 			font-size: 16px;
 			font-weight: bold;
-			height: 16px;
+			height: 18px;
+			line-height: 18px;
 		}
+		a{
+			color: #aaa;
+			font-size: 12px;
+			position: absolute;
+			right: 0;
+			top: 5px;
+			&:hover,&:active{
+				color: #333;
+				text-decoration: none;
+			}
+		}
+	}
+}
+.frame-5-padding{
+	padding: 0px;
+	border: solid 1px @edge-color-2;
+}
+.frame-tab{
+	padding-top: 0;
+}
+
+.subtitle{
+	height: 40px;
+	width: @full-width - @frame-margin*2;
+	position: relative;
+	background: url("../images/subtitle.jpg") 0 0 no-repeat;
+	.frame;
+	h3{
+		margin-left: 5px;
+		border-left: 6px solid @primary-color;
+		padding-left: 5px;
+		color: @primary-color;
+		font-size: 18px;
+		font-weight: bold;
+		line-height: 18px;
+	}
+	h4{
+		font-size: 18px;
+		font-weight: bold;
+		position: absolute;
+		right: 10px;
+		top: 11px;
+		color: #666;
 	}
 }
 
 // layout
+@width-1-3:(@full-width - (@frame-margin)*6)/3;
 .col-2{
-	width: (@full-width - (@frame-margin+@frame-padding)*4)/2;
+	width: (@full-width - (@frame-margin)*4)/2;
+}
+.col-2-5{
+	width: (@full-width - (@frame-margin)*4)*2/5;
+}
+.col-3-5{
+	width: (@full-width - (@frame-margin)*4)*3/5;
+}
+.col-1-3{
+	width: @width-1-3;
+}
+.col-2-3{
+	width: (@full-width - @width-1-3 - @frame-margin * 4);
+}
+
+
+.ad{
+	.frame;
+	background-color: #efefef;
+	overflow: hidden;
+	padding: 3px;
+	position: relative;
+	min-height: 60px;
+	img{
+		width: 100%;
+	}
+	&.ad1000{
+		width: @full-width - @frame-margin*2;
+	}
+	&.ad300{
+		width: @width-1-3;
+	}
+	&.ad600{
+		width: (@full-width - @width-1-3 - @frame-margin * 4);
+	}
+	.ad-tip{
+		position: absolute;
+		left: 0;
+		right: 0;
+		color: #ccc;
+		font-size: 20px;
+		text-align: center;
+		top: 22px;
+	}
 }
 
 #header{
@@ -119,6 +228,10 @@ body{
 		height: 30px;
 		background-color: white;
 		border-bottom: @edge-color solid 1px;
+		margin: 0 -10px;
+		-webkit-box-shadow: 0 10px 10px -10px rgba(0,0,0,0.5);
+           -moz-box-shadow: 0 10px 10px -10px rgba(0,0,0,0.5);
+                box-shadow: 0 10px 10px -10px rgba(0,0,0,0.5);
 		ul.menu-2{
 			position: absolute;
 			left: -999px;
@@ -138,8 +251,7 @@ body{
 
 #main{
 	.container-1k{
-		height: 1400px;
-		margin: 30px auto 30px auto;
+		margin: 20px auto 30px auto;
 	}
 }
 
@@ -192,6 +304,275 @@ body{
 
 // index page
 .hotnews{
-	height: 300px;
-	background-color: white;
+	height: 330px;
+}
+.notifinews{
+	height: 380px;
+}
+.solution,
+.result{
+	height: 355px;
+}
+.train{
+	height: 390px;
+}
+
+.carousel{
+	position: relative;
+	overflow: hidden;
+	li{
+		position: relative;
+		list-style:none;
+		height: 330px;
+		overflow: hidden;
+		float: left;
+	}
+	.c-title{
+		position: absolute;
+		bottom: 0;
+		text-align: center;
+		padding: 10px 10px 30px 10px;
+		background-color: fade(black,60);
+		width: 100%;
+		a{
+			font-size: 16px;
+			color: white;
+		}
+	}
+	.dots{
+		position: absolute;
+		bottom: 8px;
+		text-align: center;
+		margin: 0 auto;
+		li{
+			display: inline-block;
+			width: 10px;
+			height: 10px;
+			margin: 0 4px;
+			
+			text-indent: -999em;
+			
+			border: 2px solid #fff;
+			border-radius: 6px;
+			
+			cursor: pointer;
+			opacity: .4;
+	
+			-webkit-transition: background .5s, opacity .5s;
+			-moz-transition: background .5s, opacity .5s;
+			transition: background .5s, opacity .5s;
+			&.active{
+				background: #fff;
+				opacity: 1;
+			}
+		}
+	}
+	.unslider-arrow{
+		z-index: 100;
+		position: absolute;
+		top: 0;
+		height: 100%;
+		width: 30px;
+		color: transparent;
+		&.next{
+			position: absolute;
+			right: 0;
+			background: url("../images/next.png") 0 center no-repeat;
+		}
+		&.prev{
+			left: 0;
+			background: url("../images/prev.png") 0 center no-repeat;
+		}
+		
+	}
+}
+
+.nav-tabs{
+	border-bottom: 1px solid @primary-color;
+	margin-bottom: 15px;
+	&>li{
+		&>a{
+			border-radius: 0;
+			margin-right: -1px;
+			border: solid 1px @edge-color;
+			border-top: 0;
+			border-bottom: transparent;
+			padding: 9px 15px;
+			font-size: 14px;
+			font-weight: bold;
+		}
+	}
+	&>li.active{
+		&>a,&>a:hover{
+			margin-right: 0;
+			color: @primary-color;
+			margin-top: -5px;
+			border: 1px solid @primary-color;
+			border-top: 5px solid @primary-color;
+			border-bottom-color:transparent;
+		}
+	}
+}
+
+.breaking{
+	height: 110px;
+	margin: 0 10px;
+	.br-image{
+		float: left;
+		width: 30%;
+		height: 90px;
+		border:solid #999 1px;
+		overflow: hidden;
+		img{
+			width: 100%;
+		}
+	}
+	.br-content{
+		width: 70%;
+		float: left;
+		padding: 0 10px;
+		h3{
+			text-align: center;
+			font-size: 16px;
+			font-weight: bold;
+			color: @primary-color;
+			margin-bottom: 10px;
+		}
+		p{
+			text-indent: 24px;
+			font-size: 12px;
+			color: #777;
+		}
+	}
+}
+.people-items{
+	.person{
+		padding: 10px 20px;
+		border-bottom: solid 1px @edge-color;
+		&:last-of-type{
+			border-bottom: transparent;
+		}
+		.avatar{
+			float: left;
+			width: 60px;
+			height: 60px;
+			overflow: hidden;
+			border: solid 1px #999;
+			margin-right: 20px;
+			img{
+				width: 100%;
+			}
+		}
+		h3{
+			font-size: 16px;
+			float: left;
+			width: 180px;
+			margin-bottom: 7px;
+		}
+		p{
+			float: left;
+			width: 180px;
+			text-indent: 0;
+			font-size: 12px;
+			line-height: 150%;
+			margin-bottom: 0;
+		}
+	}
+}
+.video-items{
+	.video-item{
+		position: relative;
+		padding-bottom: 5px;
+		margin-bottom: 5px;
+		border-bottom: solid @edge-color 1px;
+		&:last-of-type{
+			border-bottom: transparent;
+		}
+		.video-image{
+			width: 150px;
+			height: 100px;
+			overflow: hidden;
+			border: 1px solid #999;
+			float: left;
+			margin-right: 10px;
+			img{
+				width: 100%;
+			}
+		}
+		h4{
+			width: 140px;
+			float: left;
+			display: block;
+			line-height: 140%;
+		}
+		p{
+			position: absolute;
+			width: 100%;
+			right: 10px;
+			bottom: 0;
+			text-align: right;
+			font-size: 12px;
+			margin-bottom: 5px;
+		}
+	}
+}
+
+.list-items{
+	.list-picnews{
+		border: solid 1px #999;
+		position: relative;
+		margin: 0 20px 15px 20px;
+		img{
+			width: 100%;
+			height: 160px;
+		}
+		.title{
+			z-index: 100;
+			bottom: 0;
+			position: absolute;
+			background-color: fade(black, 70);
+			width: 100%;
+			padding: 10px;
+			text-align: center;
+			color: white;
+			&:hover{
+				text-decoration: underline;
+			}
+		}
+	}
+	ul{
+		list-style-position: inside;
+		padding-left: 5px;
+		li{
+			position: relative;
+			margin-bottom: 12px;
+			a{
+				.list-item-link
+			}
+			.date{
+				font-size: 12px;
+				position: absolute;
+				right: 0;
+				color: #999;
+			}
+		}
+	}
+}
+.one-solution{
+	width: 25%;
+	padding: 5px;
+	float: left;
+	img{
+		border: solid 1px #999;
+		width: 100%;
+		height: 100px;
+	}
+	h4{
+		width: 100%;
+		text-align: center;
+		margin: 10px 0;
+		a:hover{
+			text-decoration: none;
+		}
+	}
 }
