--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -141,6 +141,7 @@ p{
 		li{
 			padding:10px;
 			display: inline-block;
+			*display: inline;
 			padding-right: 30px;
 			font-size: 12px;
 			background: url("../images/arrow.png") right 0 no-repeat;
@@ -234,6 +235,7 @@ p{
 		list-style-type: none;
 		li{
 			display: inline-block;
+			*display: inline;
 		}
 	}
 	#nav-1{
@@ -380,6 +382,7 @@ p{
 		margin: 0 auto;
 		li{
 			display: inline-block;
+			*display: inline;
 			width: 10px;
 			height: 10px;
 			margin: 0 4px;
@@ -661,9 +664,11 @@ p{
 				float: left;
 				width: 80px;
 				display: inline-block;
+				*display: inline;
 			}
 			.rule-detail{
 				display: inline-block;
+				*display: inline;
 				width: 780px;
 			}
 		}
@@ -743,6 +748,7 @@ p{
 	span{
 		font-weight: bold;
 		display: inline-block;
+		*display: inline;
 		width: 10%;
 		height: 20px;
 		line-height: 20px;
@@ -752,6 +758,7 @@ p{
 		width: 90%;
 		line-height: 20px;
 		display: inline-block;
+		*display: inline;
 	}
 }
 
@@ -905,14 +912,17 @@ p{
 				height: auto;
 				line-height: 130%;
 				display: inline-block;
+				*display: inline;
 				.rule-num{
 					float: left;
 					width: 30%;
 					display: inline-block;
+					*display: inline;
 				}
 				.rule-detail{
 					line-height: 130%;
 					display: inline-block;
+					*display: inline;
 					width: 70%;
 					&.tel{
 						font-size: 20px;
