--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,12 @@
 @import "reset.css";
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  *behavior: url(boxsizing.htc);
+}
 body {
   font-family: "Microsoft YaHei";
   font-size: 14px;
@@ -180,7 +188,7 @@ p {
   overflow: hidden;
   padding: 3px;
   position: relative;
-  min-height: 60px;
+  height: 60px;
 }
 .ad .frame-header {
   position: relative;
