--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -7,6 +7,13 @@
 @frame-padding:10px;
 @light-blue:#f6fafc;
 
+*, *:before, *:after{
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	box-sizing: border-box;
+	*behavior: url(boxsizing.htc);
+}
+
 body{
 	font-family: "Microsoft YaHei";
 	font-size: 14px;
@@ -165,7 +172,7 @@ p{
 	overflow: hidden;
 	padding: 3px;
 	position: relative;
-	min-height: 60px;
+	height: 60px;
 	img{
 		width: 100%;
 	}
