--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -7,12 +7,12 @@
 @frame-padding:10px;
 @light-blue:#f6fafc;
 
-// *, *:before, *:after{
-// 	-webkit-box-sizing:border-box;
-// 	-moz-box-sizing:border-box;
-// 	box-sizing: border-box;
-// 	*behavior: url(boxsizing.htc);
-// }
+*, *:before, *:after{
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	box-sizing: border-box;
+	*behavior: url(boxsizing.htc);
+}
 
 body{
 	font-family: "Microsoft YaHei";
