--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,12 @@
 @import "reset.css";
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  *behavior: url(boxsizing.htc);
+}
 body {
   font-family: "Microsoft YaHei";
   font-size: 14px;
