path to htc related to html file.

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -11,7 +11,8 @@
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing: border-box;
-	*behavior: url(boxsizing.htc);
+	// path to htc relative to html
+	*behavior: url(./assets/css/boxsizing.htc);
 }
 
 body{
