--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  *behavior: url(boxsizing.htc);
+  *behavior: url(assets/css/boxsizing.htc);
 }
 body {
   font-family: "Microsoft YaHei";
