--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -54,6 +54,7 @@ p{
 	background-color: white;
 	float: left;
 	width: 100%;
+	overflow: hidden;
 	.frame-header{
 		position: relative;
 		width: 100%;
@@ -171,7 +172,7 @@ p{
 	.frame;
 	background-color: #efefef;
 	overflow: hidden;
-	padding: 3px;
+	padding: 0;
 	position: relative;
 	height: 60px;
 	img{
@@ -333,8 +334,9 @@ p{
 		}
 	}
 	#footer-siteinfo{
-		height: 60px;
+		height: 70px;
 		background-color: #333333;
+		line-height: 20px;
 		.container-1k{
 			font-size: 12px;
 			color: #999;
