--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,43 @@ p {
   border: solid 1px #999999;
 }
 .frame-tab {
+  border: #e5e5e5 solid 1px;
+  margin: 5px;
+  padding: 10px;
+  background-color: white;
+  float: left;
+  width: 100%;
   padding-top: 0;
+}
+.frame-tab .frame-header {
+  position: relative;
+  width: 100%;
+  border-bottom: solid 1px #0066cc;
+  padding-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+.frame-tab .frame-header h3 {
+  display: block;
+  border-left: solid 5px #0066cc;
+  padding-left: 5px;
+  color: #0066cc;
+  font-size: 16px;
+  font-weight: bold;
+  height: 18px;
+  line-height: 18px;
+}
+.frame-tab .frame-header a {
+  color: #aaa;
+  font-size: 12px;
+  position: absolute;
+  right: 0;
+  top: 5px;
+}
+.frame-tab .frame-header a:hover,
+.frame-tab .frame-header a:active {
+  color: #333;
+  text-decoration: none;
 }
 .subtitle {
   height: 40px;
