--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -90,6 +90,41 @@ p{
 	border: solid 1px @edge-color-2;
 }
 .frame-tab{
+	border: @edge-color solid 1px;
+	margin: @frame-margin;
+	padding: @frame-padding;
+	background-color: white;
+	float: left;
+	width: 100%;
+	.frame-header{
+		position: relative;
+		width: 100%;
+		border-bottom: solid 1px @primary-color;
+		padding-bottom: 5px;
+		margin-top: 5px;
+		margin-bottom: 15px;
+		h3{
+			display: block;
+			border-left: solid 5px @primary-color;
+			padding-left: 5px;
+			color: @primary-color;
+			font-size: 16px;
+			font-weight: bold;
+			height: 18px;
+			line-height: 18px;
+		}
+		a{
+			color: #aaa;
+			font-size: 12px;
+			position: absolute;
+			right: 0;
+			top: 5px;
+			&:hover,&:active{
+				color: #333;
+				text-decoration: none;
+			}
+		}
+	}
 	padding-top: 0;
 }
 
